animation on mobile bug fix

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -341,7 +341,11 @@
   animation: zoom-out 1s ease-out both;
 }
 
-.animation-delay-300 {
-  animation-delay: 300ms;
+.animation-delay-600 {
+  animation-delay: 600ms;
+}
+
+.animation-delay-900 {
+  animation-delay: 900ms;
 }
 
